--- a/src/app/form/app.af-form.css
+++ b/src/app/form/app.af-form.css
@@ -34,6 +34,7 @@
   div.section-row {
     flex-wrap: wrap;
     flex-direction: row;
+    align-content: unset;
   }
 
   h6 {
@@ -49,7 +50,7 @@
 
   mat-form-field {
     margin: 0px 0.5%;
-    width: 95%;
+    width: 96%;
     height: 100%;
   }
 
@@ -60,17 +61,10 @@
     flex: 0 0 80px;
   }
 
-  /*
-  div.fieldgroup {
-    flex-direction: row;
-    align-content: flex-start;
-    justify-content: flex-start;
+  .mat-footer-cell {
+    text-align: right;
+    padding-right: 10%;
   }
-  
-  #definition {
-    padding-top: 0.5em;
-  }
-  
 
   .enabled {
       background-color: #ae3803;
@@ -82,62 +76,56 @@
     border: 0.25px;
     text-align: center;
   }
-*/
   .monetaire {
       text-align: right;
-  }/*
-
-  th, 
-  tr.mat-row {
-    height: 3em;
   }
 
   mat-radio-group {
     display: flex;
-    width: 95%;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-content: flex-end;
+  }
+
+  .end {
+    display: flex;
+    align-items: baseline;
   }
 
   #signature-demandeur {
     border: 2px solid black;
-    width: max-content;
+    width: 100%;
     margin-bottom: 5px;
     padding: 5px 10px;
   }
-
+  /*
   #signature-demandeur button {
     margin-left: 60px;
-  }*/
-  .mat-footer-cell {
-    text-align: right;
-    padding-right: 10%;
   }
-/*
+.signature {
+  border: 2px solid black;
+  margin-bottom: 5px;
+  padding: 5px 10px;
+  text-align: center;
+  width:100%;
+}
 
-  .percentile {
-    width: 10%;
-  }
+.signature mat-form-field {
+  width: 100%;
+}*/
 
-  #cycles {
-    flex-direction: row;
-  }
-
-  .check-category {
-    justify-content: space-evenly;
-    width: 100%;
-  }
-  .check-category-label {
-    justify-content: flex-start;
-    padding-left: 1em;
-    width: 100%;
-  }*/
-
-  mat-form-field.short {
+  .short {
     width: 24%;
   }
-  mat-form-field.medium {
+  .medium {
     width: 48%;
   }
-  mat-form-field.large {
+  .large {
     width: 72%;
+  }
+  .full {
+    width: 96%;
+  }
+
+  .mat-column-percent {
+    width: 100px;
   }
