--- a/src/app/form/app.af-form.html
+++ b/src/app/form/app.af-form.html
@@ -78,9 +78,9 @@
 </div>
 <div class="sectionheader">
   <h6>DÉTAIL DE L'AIDE FINANCIÈRE</h6>
-  <div class="section">
-  <p>Les versements sont faits aux quize jours, selon le cycle de la paie.</p>
-  <p>PÉRIODE D'ENGAGEMENT:</p>
+  <div class="section section-row">
+    <p>Les versements sont faits aux quize jours, selon le cycle de la paie.</p>
+    <p>PÉRIODE D'ENGAGEMENT:</p>
     <mat-form-field class="short">
       <input matInput [matDatepicker]="debut" placeholder="Date de début">
       <mat-datepicker-toggle matSuffix [for]="debut"></mat-datepicker-toggle>
@@ -91,15 +91,16 @@
       <mat-datepicker-toggle matSuffix [for]="fin"></mat-datepicker-toggle>
       <mat-datepicker #fin></mat-datepicker>
     </mat-form-field>
-    <mat-radio-group [(ngModel)]="statutVersement">
-      <mat-radio-button [value]="1">Versement unique</mat-radio-button>
-      <mat-radio-button [value]="2">Nouveau versement</mat-radio-button>
-      <mat-radio-button [value]="3">Changement</mat-radio-button>
-    </mat-radio-group>
-      <mat-form-field hideRequiredMarker=true floatLabel="auto" class="short">
-        <input matInput placeholder="Numéro de référence" required
-        [disabled]="statutVersement != 3">
-      </mat-form-field>
+    <div class="end full">
+      <mat-radio-group [(ngModel)]="statutVersement" class="large">
+        <mat-radio-button [value]="1">Versement unique</mat-radio-button>
+        <mat-radio-button [value]="2">Nouveau versement</mat-radio-button>
+        <mat-radio-button [value]="3">Changement</mat-radio-button>
+      </mat-radio-group>
+    <mat-form-field floatLabel="auto" class="short">
+      <input matInput placeholder="Numéro de référence"
+      [disabled]="statutVersement != 3">
+    </mat-form-field></div>
     <mat-form-field floatLabel="auto" class="short">
       <mat-label>Montant de l'aide financière</mat-label>
       <input class="monetaire" matInput
@@ -119,8 +120,8 @@
           <th mat-header-cell *matHeaderCellDef> UBR. </th>
           <td mat-cell *matCellDef="let element">
             <mat-form-field hideRequiredMarker=true floatLabel="auto">
-                <input matInput [(ngModel)]="element.ubr">
-              </mat-form-field>
+              <input matInput [(ngModel)]="element.ubr">
+            </mat-form-field>
           </td>
       </ng-container>
       <ng-container matColumnDef="compte">
@@ -141,7 +142,7 @@
       </ng-container>
       <ng-container matColumnDef="percent">
           <th mat-header-cell *matHeaderCellDef> % </th>
-          <td mat-cell *matCellDef="let element">
+          <td mat-cell *matCellDef="let element" class="mat-column-percent">
               <mat-form-field hideRequiredMarker=true floatLabel="auto">
               <input matInput [(ngModel)]="element.percent" type="number">
               </mat-form-field>
@@ -197,12 +198,10 @@
     </p><p>
       Les bourses de perfectionnement sont semblables à des bourses  d'études, en ce sens qu'il s'agit de sommes ou d'avantages accordés à des personnes pour leur permettre de poursuivre leur études.  Toutefois, le récipiendaire est habituellement un étudiant diplômé, et le payeur, une université, un organisme de bien-faisance ou un organisme semblable.  En général, les bourses de perfectionnement sont décernées pour des études doctorales ou pour du travail de niveau postdoctoral.
     </p>
-    <div id="signature-demandeur">
+    <div class="signature" id="signature-demandeur">
         <mat-form-field>
             <input matInput type="text" placeholder="SIGNATURE DU DEMANDEUR">
         </mat-form-field>
-        <button mat-raised-button>SIGNER</button>
-        <br>
         <mat-checkbox
           class="example-margin"
           [(ngModel)]="checked"
@@ -211,6 +210,8 @@
           [disabled]="disabled">
           Je confirme et j'accepte la véracité des informations ci-dessus.
         </mat-checkbox>
+        <br>
+        <button mat-raised-button>SIGNER</button>
     </div>
   </div>
 </div>
