--- a/src/app/form/app.af-form.css
+++ b/src/app/form/app.af-form.css
@@ -4,13 +4,13 @@
   } /*KETE: déplacer sur stylesheet global*/
   
   div {
-    display: flex;
     font-size: 13px;
-    align-content: flex-start;
-    justify-content: flex-start;
   }
 
   div.sectionheader {
+    display: flex;
+    align-content: flex-start;
+    justify-content: flex-start;
     flex-direction: column;
     flex-wrap: wrap;
     align-content: flex-start;
@@ -21,6 +21,9 @@
     padding: 0px;
   }
   div.section {
+    display: flex;
+    align-content: flex-start;
+    justify-content: flex-start;
     flex-wrap: wrap;
     background-color: #ffffff;
     align-content: inherit;
@@ -28,10 +31,16 @@
     width: 100%;
   }
   div.section-column {
+    display: flex;
+    align-content: flex-start;
+    justify-content: flex-start;
     flex-wrap: wrap;
     display: block;
   }
   div.section-row {
+    display: flex;
+    align-content: flex-start;
+    justify-content: flex-start;
     flex-wrap: wrap;
     flex-direction: row;
     align-content: unset;
@@ -51,7 +60,6 @@
   mat-form-field {
     margin: 0px 0.5%;
     width: 96%;
-    height: 100%;
   }
 
   .checkbox-label {
@@ -91,27 +99,25 @@
     align-items: baseline;
   }
 
-  #signature-demandeur {
-    border: 2px solid black;
-    width: 100%;
-    margin-bottom: 5px;
-    padding: 5px 10px;
-  }
-  /*
-  #signature-demandeur button {
-    margin-left: 60px;
-  }
+#signatures {
+    margin: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1 1 2;
+    justify-content: space-between;
+}
 .signature {
   border: 2px solid black;
   margin-bottom: 5px;
   padding: 5px 10px;
   text-align: center;
+  flex-direction: row;
   width:100%;
 }
 
 .signature mat-form-field {
   width: 100%;
-}*/
+}
 
   .short {
     width: 24%;
