--- a/src/app/form/app.af-form.html
+++ b/src/app/form/app.af-form.html
@@ -198,12 +198,13 @@
     </p><p>
       Les bourses de perfectionnement sont semblables à des bourses  d'études, en ce sens qu'il s'agit de sommes ou d'avantages accordés à des personnes pour leur permettre de poursuivre leur études.  Toutefois, le récipiendaire est habituellement un étudiant diplômé, et le payeur, une université, un organisme de bien-faisance ou un organisme semblable.  En général, les bourses de perfectionnement sont décernées pour des études doctorales ou pour du travail de niveau postdoctoral.
     </p>
-    <div class="signature" id="signature-demandeur">
+    <div id="signatures">
+    <div class="signature">
         <mat-form-field>
-            <input matInput type="text" placeholder="SIGNATURE DU DEMANDEUR">
+          <input matInput type="text" placeholder="SIGNATURE DU BOURSIER">
         </mat-form-field>
         <mat-checkbox
-          class="example-margin"
+          class="large"
           [(ngModel)]="checked"
           [(indeterminate)]="indeterminate"
           [labelPosition]="labelPosition"
@@ -213,6 +214,52 @@
         <br>
         <button mat-raised-button>SIGNER</button>
     </div>
+    <div class="signature">
+        <mat-form-field>
+          <input matInput type="text" placeholder="SIGNATURE DU (DES) TITULAIRES(S) DE SUBVENTION">
+        </mat-form-field>
+        <mat-checkbox
+          class="large"
+          [(ngModel)]="checked"
+          [(indeterminate)]="indeterminate"
+          [labelPosition]="labelPosition"
+          [disabled]="disabled">
+          Je confirme et j'accepte la véracité des informations ci-dessus.
+        </mat-checkbox>
+        <br>
+        <button mat-raised-button>SIGNER</button>
+    </div>
+    <div class="signature">
+        <mat-form-field>
+          <input matInput type="text" placeholder="SIGNATURE(S) AUTORISÉE(S)">
+        </mat-form-field>
+        <mat-checkbox
+          class="large"
+          [(ngModel)]="checked"
+          [(indeterminate)]="indeterminate"
+          [labelPosition]="labelPosition"
+          [disabled]="disabled">
+          Je confirme et j'accepte la véracité des informations ci-dessus.
+        </mat-checkbox>
+        <br>
+        <button mat-raised-button>SIGNER</button>
+    </div>
+    <div class="signature">
+        <mat-form-field>
+          <input matInput type="text" placeholder="SERVICE DES FINANCES">
+        </mat-form-field>
+        <mat-checkbox
+          class="large"
+          [(ngModel)]="checked"
+          [(indeterminate)]="indeterminate"
+          [labelPosition]="labelPosition"
+          [disabled]="disabled">
+          Je confirme et j'accepte la véracité des informations ci-dessus.
+        </mat-checkbox>
+        <br>
+        <button mat-raised-button>SIGNER</button>
+    </div>
+  </div>
   </div>
 </div>
 
