--- a/src/app/templates/paymentForm.component.html
+++ b/src/app/templates/paymentForm.component.html
@@ -231,7 +231,10 @@
 <div id="signatures">
     <div id="signature-demandeur" class="signature">
         <mat-form-field>
-            <input matInput type="text" placeholder="SIGNATURE DU DEMANDEUR">
+            <input matInput type="text" placeholder="SIGNATURE DU DEMANDEUR" [(ngModel)]="nomDemandeur">
+            <mat-hint *ngIf="nomDemandeur.length == 0">
+            Le nom et le prénom du demandeur sont obligatoires!
+            </mat-hint>
         </mat-form-field>
         
         <mat-checkbox
@@ -244,11 +247,19 @@
           Je confirme et j'accepte la véracité des informations ci-dessus.
         </mat-checkbox>
         <br>
-        <button mat-raised-button>SIGNER</button>
+        <button mat-raised-button *ngIf="!signatureAdded" 
+          [disabled]="nomDemandeur.length == 0 || !demandeurChecked" 
+          (click)="addSignature()">SIGNER</button>
+
+        <button mat-raised-button *ngIf="signatureAdded" 
+          (click)="removeSignature()">ANNULER</button>
     </div>
     <div id="signature-ubr" class="signature">
         <mat-form-field>
             <input matInput type="text" placeholder="SIGNATURE(S) DU OU DES RESPONSABLE(S) DE L'UBR">
+            <mat-hint *ngIf="nomDemandeur.length == 0">
+            Le(s) nom(s) et le(s) prénom(s) du ou des responsable(s) sont obligatoires!
+            </mat-hint>
         </mat-form-field>
         
         <mat-checkbox
@@ -261,11 +272,14 @@
             Je confirme et j'accepte la véracité des informations ci-dessus.
         </mat-checkbox>
         <br>
-        <button mat-raised-button>SIGNER</button>
+        <button mat-raised-button disabled>SIGNER</button>
     </div>
     <div id="signature-sup" class="signature">
         <mat-form-field>
             <input matInput type="text" placeholder="SIGNATURE DU SUPÉRIEUR IMMÉDIAT">
+            <mat-hint *ngIf="nomDemandeur.length == 0">
+            Le nom et le prénom du supérieur immédiat sont obligatoires!
+            </mat-hint>
         </mat-form-field>
         
         <mat-checkbox
@@ -278,11 +292,14 @@
             Je confirme et j'accepte la véracité des informations ci-dessus.
         </mat-checkbox>
         <br>
-        <button mat-raised-button>SIGNER</button>
+        <button mat-raised-button disabled>SIGNER</button>
     </div>
     <div id="signature-finance" class="signature">
         <mat-form-field>
             <input matInput type="text" placeholder="SERVICE DES FINANCES">
+            <mat-hint *ngIf="nomDemandeur.length == 0">
+            Nom obligatoire!
+            </mat-hint>
         </mat-form-field>
         
         <mat-checkbox
@@ -295,7 +312,7 @@
             Je confirme et j'accepte la véracité des informations ci-dessus.
         </mat-checkbox>
         <br>
-        <button mat-raised-button>SIGNER</button>
+        <button mat-raised-button disabled>SIGNER</button>
     </div>
 </div>
 <div id="references">
