--- a/src/app/templates/paymentForm.component.html
+++ b/src/app/templates/paymentForm.component.html
@@ -105,12 +105,13 @@
               <td mat-cell *matCellDef="let facture" class="total">
                   <div class ="totalFactureDevise">
                     <mat-form-field>
-                        <input matInput type="number" [(ngModel)]="facture.total">
+                        <!-- TODO:  -->
+                        <input matInput type="number" [(ngModel)]="factureTotal">
                     </mat-form-field>
 
-                    <mat-select placeholder="Devise">
-                        <mat-option *ngFor="let c of currency" [value]="c">
-                        {{ c }}
+                    <mat-select placeholder="Devise" [(ngModel)]="selectedCurrency">
+                        <mat-option *ngFor="let c of currency" [value]="c.value">
+                        {{ c.display }}
                         </mat-option>
                     </mat-select>
                   </div>
@@ -120,7 +121,7 @@
             <ng-container matColumnDef="totalFactureCAD">
                 <th mat-header-cell *matHeaderCellDef> TOTAL DE LA FACTURE <br> (en CAN) </th>
                 <td mat-cell *matCellDef="let facture">
-                    {{ facture.totalCAD }}
+                    <!-- {{ calculateAmount() }} -->
                 </td>
             </ng-container>
 
