--- a/src/app/templates/paymentForm.component.html
+++ b/src/app/templates/paymentForm.component.html
@@ -109,7 +109,7 @@
                         <input matInput type="number" [(ngModel)]="factureTotal">
                     </mat-form-field>
 
-                    <mat-select placeholder="Devise" [(ngModel)]="selectedCurrency">
+                    <mat-select placeholder="Devise" [(ngModel)]="selectedCurrency" (selectionChange)="calculateAmount()">
                         <mat-option *ngFor="let c of currency" [value]="c.value">
                         {{ c.display }}
                         </mat-option>
@@ -121,7 +121,7 @@
             <ng-container matColumnDef="totalFactureCAD">
                 <th mat-header-cell *matHeaderCellDef> TOTAL DE LA FACTURE <br> (en CAN) </th>
                 <td mat-cell *matCellDef="let facture">
-                    <!-- {{ calculateAmount() }} -->
+                    {{ factureTotalCAD }}
                 </td>
             </ng-container>
 
