--- a/src/app/form/app.af-form.html
+++ b/src/app/form/app.af-form.html
@@ -161,7 +161,7 @@
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element">
               <button mat-icon-button color="warn"
-              (click)="onDelete(element.id)">x</button>
+              (click)="onDelete(element)">x</button>
           </td>
       </ng-container>
       <ng-container matColumnDef="total">
