--- a/src/app/formulaires/voyage-form/voyage-form.component.html
+++ b/src/app/formulaires/voyage-form/voyage-form.component.html
@@ -75,7 +75,7 @@
         <thead>
             <tr>
                 <th align="left">ENDROIT DU DÉPLACEMENT</th>
-                <th>DURÉE DU DÉPLACEMENT</th>
+                <th colspan="2">DURÉE DU DÉPLACEMENT</th>
                 <th>NOMBRE<br>DE JOURS</th>
             </tr>
         </thead>
@@ -119,7 +119,7 @@
 
 <div id="estimation-depenses">
   <h6>ESTIMATION DES DÉPENSES (EN DOLLARS CANADIENS)</h6>
-  <table width="100%">
+  <table width="100%" id="tableau-estimation-depenses">
         <thead>
             <tr>
                 <th>FRAIS D'INSCRIPTION</th>
@@ -214,7 +214,7 @@
 
 <div id="avances-demandees">
   <h6>AVANCES DEMANDÉES</h6>
-  <table width="100%">
+  <table width="100%" id="tableau-avances-demandees">
         <tbody>
             <tr>
                 <td>
