--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary"><span><img src="assets/img/logo-poly.PNG"></span></mat-toolbar>
-<mat-toolbar id="secondaryToolbar" color="primary"></mat-toolbar>
+<!--<mat-toolbar id="secondaryToolbar" color="primary"></mat-toolbar>-->
 <router-outlet></router-outlet>
 <!--<mat-nav-list>-->
 <!--<a mat-list-item routerLink="/dashboard">Tableau de bord</a>-->
