Adds hover list.

--- a/src/app/nouveau-formulaire/nouveau-formulaire.component.html
+++ b/src/app/nouveau-formulaire/nouveau-formulaire.component.html
@@ -1,3 +1,9 @@
+<mat-selection-list #formulaires>
+  <mat-list-option *ngFor="let form of typesOfForms">
+    {{form}}
+  </mat-list-option>
+</mat-selection-list>
+
 <p>
-  nouveau-formulaire works!
+  Options selected: {{formulaires.selectedOptions.selected.length}}
 </p>
