--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <!--<app-dashboard></app-dashboard>-->
-<app-demande-achat></app-demande-achat>
+<!--<app-demande-achat></app-demande-achat>-->
+<app-nouveau-formulaire></app-nouveau-formulaire>
